--- a/Views/GioHang/ThongBao.cshtml
+++ b/Views/GioHang/ThongBao.cshtml
@@ -1,1 +1,12 @@
-﻿<h2>Sản phẩm đã hết hàng không đặt tiếp</h2>
+﻿<div class="cart">
+    <div class="cart-item">
+        <div class="empty-cart">
+            <img src="~/assets/images/minicart/empty-cart.png" />
+            <div class="empty-cart-text">
+                <h1>Sản phẩm hiện tại đã hết hàng! </h1>
+                <p>Hãy mua hàng ngàn sản phẩm chất lượng khác tại Shop nhé!</p>
+                <a href="@Url.Action("DanhSachSanPham", "Home")" class="fb-btn">Mua sắm ngay</a>
+            </div>
+        </div>
+    </div>
+</div>
