--- a/Views/Home/SanPhamTheoLoai.cshtml
+++ b/Views/Home/SanPhamTheoLoai.cshtml
@@ -9,23 +9,20 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-9 order-1 order-lg-2">
-                <!-- Begin FB's Banner Area -->
-                <!-- Li's Banner Area End Here -->
-                <!-- shop-top-bar start -->
                 <div class="shop-top-bar mt-25">
                     <div class="shop-bar-inner">
                         <div class="product-view-mode">
                             <!-- shop-item-filter-list start -->
                             <ul class="nav shop-item-filter-list" role="tablist">
                                 <li class="active" role="presentation">
-                                    <a aria-selected="true" class="active show" data-bs-toggle="tab" role="tab" aria-controls="grid-view" href="#grid-view"><i class="fa fa-th"></i></a>
+                                    <a aria-selected="true" class="show active" data-bs-toggle="tab" role="tab" aria-controls="grid-view" href="#grid-view"><i class="fa fa-th"></i></a>
                                 </li>
-                                <li role="presentation"><a data-bs-toggle="tab" role="tab" aria-controls="list-view" href="#list-view" aria-selected="false" tabindex="-1"><i class="fa fa-th-list"></i></a></li>
+                                <li role="presentation"><a data-bs-toggle="tab" role="tab" aria-controls="list-view" href="#list-view" aria-selected="false" class="" tabindex="-1"><i class="fa fa-th-list"></i></a></li>
                             </ul>
                             <!-- shop-item-filter-list end -->
                         </div>
                         <div class="toolbar-amount">
-                            <span>@Model.Count Sản Phẩm.</span>
+                            <span>@Model.Count Sản Phẩm</span>
                         </div>
                     </div>
                     <!-- product-select-box start -->
@@ -45,8 +42,6 @@
                     </div>
                     <!-- product-select-box end -->
                 </div>
-                <!-- shop-top-bar end -->
-                <!-- shop-products-wrapper start -->
                 <div class="shop-products-wrapper bg-white mt-30 pb-60 pb-sm-30">
                     <div class="tab-content">
                         <div id="grid-view" class="tab-pane fade active show" role="tabpanel">
@@ -64,7 +59,7 @@
                                 <div class="col-lg-4 col-md-6" style="box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);">
                                     <ul class="pagination-box pt-xs-20 pb-xs-15">
                                         <li>
-                                            @(Model.PageCount<Model.PageNumber ? 0 : Model.PageNumber)/@Model.PageCount
+                                            @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber)/@Model.PageCount
                                         </li>
                                         <li class="" style="float:right">@Html.PagedListPager(Model, Page => @Url.Action("SanPhamTheoLoai", new { Page = Page, @MaLoai = ViewBag.Maloai }))</li>
                                     </ul>
@@ -98,43 +93,43 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <input type="radio" name="product-categori"><a href="#">
+                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia1_5", "SanPham")">
                                         1 triệu -
                                         5 triệu
                                     </a>
                                 </li>
                                 <li>
-                                    <input type="radio" name="product-categori"><a href="#">
+                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia5_10", "SanPham")">
                                         5 triệu -
                                         10 triệu
                                     </a>
                                 </li>
                                 <li>
-                                    <input type="radio" name="product-categori"><a href="#">
+                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia10_15", "SanPham")">
                                         10 triệu -
                                         15 triệu
                                     </a>
                                 </li>
                                 <li>
-                                    <input type="radio" name="product-categori"><a href="#">
+                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia15_30", "SanPham")">
                                         15 triệu -
                                         30 triệu
                                     </a>
                                 </li>
                                 <li>
-                                    <input type="radio" name="product-categori"><a href="#">
+                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia30_50", "SanPham")">
                                         30 triệu -
                                         50 triệu
                                     </a>
                                 </li>
                                 <li>
-                                    <input type="radio" name="product-categori"><a href="#">
+                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia50_100", "SanPham")">
                                         50 triệu -
                                         100 triệu
                                     </a>
                                 </li>
                                 <li>
-                                    <input type="radio" name="product-categori"><a href="#">
+                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGiaTren100", "SanPham")">
                                         Trên 100 triệu
                                     </a>
                                 </li>
