--- a/Views/Sanpham/SidebarSanPhamPartial.cshtml
+++ b/Views/Sanpham/SidebarSanPhamPartial.cshtml
@@ -14,7 +14,7 @@
                                 if (item.Key != null)
                                 {
                                     <li>
-                                        <a href="@Url.Action("SanPhamTheoNhaSanXuat", "Home", new { id = item.Key.MaNSX })">@item.Key.TenNSX</a>
+                                        <a href="@Url.Action("SanPhamTheoNhaSanXuat", "Home", new {maLoai = groupItem.Key.MaLoaiSP, id = item.Key.MaNSX })">@item.Key.TenNSX</a>
                                     </li>
                                 }
                             }
