--- a/Views/Sanpham/ChiTietSanPhamLapTop.cshtml
+++ b/Views/Sanpham/ChiTietSanPhamLapTop.cshtml
@@ -10,64 +10,11 @@
                 <div class="row">
                     <div class="col-lg-5">
                         <div class="pdetails-images">
-                            <div class="pdetails-largeimages pdetails-imagezoom">
+                            <div class="pdetails-largeimages pdetails-imagezoom" style="padding:25%">
                                 <div class="pdetails-singleimage"
-                                     data-src="~/assets/images/product-mini/@Model.HinhAnh1">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh1"
-                                         alt="product image" style="margin:20px 0">
-                                    <div class="sticker">New</div>
-                                </div>
-                                <div class="pdetails-singleimage"
-                                     data-src="~/assets/images/product-mini/@Model.HinhAnh2">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh2"
-                                         alt="product image" style="margin:20px 0">
-                                </div>
-                                <div class="pdetails-singleimage"
-                                     data-src="~/assets/images/product-mini/@Model.HinhAnh3">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh3"
-                                         alt="product image" style="margin:20px 0">
-                                </div>
-                                <div class="pdetails-singleimage"
-                                     data-src="~/assets/images/product-mini/@Model.HinhAnh1">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh1"
-                                         alt="product image" style="margin:20px 0">
-                                </div>
-                                <div class="pdetails-singleimage"
-                                     data-src="~/assets/images/product-mini/@Model.HinhAnh2">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh2"
-                                         alt="product image" style="margin:20px 0">
-                                </div>
-                                <div class="pdetails-singleimage"
-                                     data-src="~/assets/images/product-mini/@Model.HinhAnh3">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh3"
-                                         alt="product image" style="margin:20px 0">
-                                </div>
-                            </div>
-
-                            <div class="pdetails-thumbs">
-                                <div class="pdetails-singlethumb">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh1"
-                                         alt="product thumb">
-                                </div>
-                                <div class="pdetails-singlethumb">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh2"
-                                         alt="product thumb">
-                                </div>
-                                <div class="pdetails-singlethumb">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh3"
-                                         alt="product thumb">
-                                </div>
-                                <div class="pdetails-singlethumb">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh1"
-                                         alt="product thumb">
-                                </div>
-                                <div class="pdetails-singlethumb">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh2"
-                                         alt="product thumb">
-                                </div>
-                                <div class="pdetails-singlethumb">
-                                    <img src="~/assets/images/product-mini/@Model.HinhAnh3"
-                                         alt="product thumb">
+                                     data-src="~/assets/images/product/@Model.HinhAnh1">
+                                    <img src="~/assets/images/product/@Model.HinhAnh1"
+                                         alt="product image" style="margin:0 0">
                                 </div>
                             </div>
                         </div>
