--- a/Views/Home/DangNhap.cshtml
+++ b/Views/Home/DangNhap.cshtml
@@ -38,19 +38,28 @@
                             <div class="col-md-12">
                                 <button type="submit" class="register-button mt-0">Login</button>
                             </div>
+                            @if (TempData["ThongBao"] != null)
+                            {
+                                <script>
+                                    alert("@Html.Raw(TempData["ThongBao"])");
+                                </script>
+                            }
+                            @*<div class="col-md-4" style="margin:0 45px">
+                                    <button value="Google" type="submit" class="register-button mt-0" >
+                                        <i class="fa-brands fa-google"></i>
+                                        Google
+                                    </button>
+                                </div>
+                                <div class="col-md-4">
+                                    <button type="submit" class="register-button mt-0">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                        Facabook
+                                    </button>
+                                </div>*@
                         </div>
                     }
                 </div>
             </div>
         </div>
-    </div>  
     </div>
-    <script>
-    $(document).ready(function () {
-        $(".register-button").click(function () {
-            setTimeout(function () {
-                alert("@Html.Raw(ViewBag.ThongBao)");
-            }, 500);
-        });
-    });
-    </script>
+</div>
