--- a/Views/Home/SanPhamTheoLoai.cshtml
+++ b/Views/Home/SanPhamTheoLoai.cshtml
@@ -25,22 +25,6 @@
                             <span>@Model.Count Sản Phẩm</span>
                         </div>
                     </div>
-                    <!-- product-select-box start -->
-                    <div class="product-select-box">
-                        <div class="product-short">
-                            <p>Sort By:</p>
-                            <select class="nice-select" style="display: none;">
-                                <option value="trending">Relevance</option>
-                                <option value="sales">Name (A - Z)</option>
-                                <option value="sales">Name (Z - A)</option>
-                                <option value="rating">Price (Low &gt; High)</option>
-                                <option value="date">Rating (Lowest)</option>
-                                <option value="price-asc">Model (A - Z)</option>
-                                <option value="price-asc">Model (Z - A)</option>
-                            </select><div class="nice-select" tabindex="0"><span class="current">Relevance</span><ul class="list"><li data-value="trending" class="option selected">Relevance</li><li data-value="sales" class="option">Name (A - Z)</li><li data-value="sales" class="option">Name (Z - A)</li><li data-value="rating" class="option">Price (Low &gt; High)</li><li data-value="date" class="option">Rating (Lowest)</li><li data-value="price-asc" class="option">Model (A - Z)</li><li data-value="price-asc" class="option">Model (Z - A)</li></ul></div>
-                        </div>
-                    </div>
-                    <!-- product-select-box end -->
                 </div>
                 <div class="shop-products-wrapper bg-white mt-30 pb-60 pb-sm-30">
                     <div class="tab-content">
@@ -61,7 +45,7 @@
                                         <li>
                                             @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber)/@Model.PageCount
                                         </li>
-                                        <li class="" style="float:right">@Html.PagedListPager(Model, Page => @Url.Action("SanPhamTheoLoai", new { Page = Page, @MaLoai = ViewBag.Maloai }))</li>
+                                        <li class="" style="float:right">@Html.PagedListPager(Model, Page => @Url.Action("SanPhamTheoLoai", new { Page = Page, @id = ViewBag.Maloai }))</li>
                                     </ul>
                                 </div>
                             </div>
@@ -74,69 +58,7 @@
                     <h2>Sản Phẩm</h2>
                 </div>
                 @Html.Action("SidebarSanPhamPartial", "SanPham")
-                <div class="sidebar-categores-box search-filter mt-sm-25 mt-xs-30">
-                    <div class="sidebar-title">
-                        <h2>Filter By</h2>
-                    </div>
-                    <button class="btn-clear-all">Clear all</button>
-                </div>
-                <div class="sidebar-title-2">
-                    <h2>Mức giá</h2>
-                </div>
-                <div class="sidebar-categores-box sidebar-categores_list mt-sm-25 mt-xs-25">
-                    <div class="sidebar-categores-checkbox">
-                        <form action="#">
-                            <ul>
-                                <li>
-                                    <input type="radio" name="product-categori" checked=""><a href="#">
-                                        Tất cả
-                                    </a>
-                                </li>
-                                <li>
-                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia1_5", "SanPham")">
-                                        1 triệu -
-                                        5 triệu
-                                    </a>
-                                </li>
-                                <li>
-                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia5_10", "SanPham")">
-                                        5 triệu -
-                                        10 triệu
-                                    </a>
-                                </li>
-                                <li>
-                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia10_15", "SanPham")">
-                                        10 triệu -
-                                        15 triệu
-                                    </a>
-                                </li>
-                                <li>
-                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia15_30", "SanPham")">
-                                        15 triệu -
-                                        30 triệu
-                                    </a>
-                                </li>
-                                <li>
-                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia30_50", "SanPham")">
-                                        30 triệu -
-                                        50 triệu
-                                    </a>
-                                </li>
-                                <li>
-                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia50_100", "SanPham")">
-                                        50 triệu -
-                                        100 triệu
-                                    </a>
-                                </li>
-                                <li>
-                                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGiaTren100", "SanPham")">
-                                        Trên 100 triệu
-                                    </a>
-                                </li>
-                            </ul>
-                        </form>
-                    </div>
-                </div>
+                @Html.Action("DonGia", "SanPham")
             </div>
         </div>
     </div>
