--- a/Views/Sanpham/Sanphamstyle2Partial.cshtml
+++ b/Views/Sanpham/Sanphamstyle2Partial.cshtml
@@ -7,15 +7,30 @@
         <div class="single-product">
             <!-- Begin Product Image Area -->
             <div class="product-img">
-                <a href="@Url.Action("ChiTietSanPham", "Sanpham", new { id = item.MaSP, @tensp = item.TenSP })">
+                @if (item.MaLoaiSP == 1)
+                {
+                    <a href="@Url.Action("ChiTietSanPham", "Sanpham", new { id = item.MaSP, @tensp = item.TenSP })">
+                        <img class="primary-img" src="@Url.Content("~/assets/images/product/" + @item.HinhAnh)" alt="FB'S Prduct">
+                    </a>
+                }
+                @if (item.MaLoaiSP == 2)
+                {
+                    <a href="@Url.Action("ChiTietSanPhamLapTop", "SanPham", new { maLoai = item.MaLoaiSP, id = item.MaSP, @tensp = item.TenSP })">
                     <img class="primary-img" src="@Url.Content("~/assets/images/product/" + @item.HinhAnh)" alt="FB'S Prduct">
                 </a>
-                <div class="sticker"><span>New</span></div>
+            }
             </div>
             <!-- Product Image Area End Here -->
             <!-- Begin Product Content Area -->
             <div class="product-content">
-                <h5 class="product-name" style="margin-top:20px;"><a href="@Url.Action("ChiTietSanPham", "SanPham", new { id = item.MaSP, @tensp = item.TenSP })">@item.TenSP</a></h5>
+                @if (item.MaLoaiSP == 1)
+                {
+                    <h5 class="product-name" style="margin-top:20px;"><a href="@Url.Action("ChiTietSanPham", "SanPham", new { id = item.MaSP, @tensp = item.TenSP })">@item.TenSP</a></h5>
+                }
+                @if (item.MaLoaiSP == 2)
+                {
+                    <h5 class="product-name" style="margin-top:20px;"><a href="@Url.Action("ChiTietSanPhamLapTop", "SanPham", new { maLoai = item.MaLoaiSP, id = item.MaSP, @tensp = item.TenSP })">@item.TenSP</a></h5>
+                }
                 <div class="rating-box">
                     <ul class="rating">
                         <li><i class="fa fa-star"></i></li>
